# Calcifer-AI-Agent

./: .env.example  .gitignore  README.md  agents.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/api/: app.py
apps/ui/: index.html  package.json
apps/ui/src/: App.jsx  styles.css
config/: IDENTITY.md
docs/: ARCHITECTURE.md
memory/: MEMORY.md
scripts/: smoke_api.py
skills/base/: SKILL.md
skills/groceries_planner/: skill.py
skills/routine_builder/: skill.py
src/: main.py
src/calcifer/adapters/llm/: openai_client.py
src/calcifer/adapters/storage/: journal.py
src/calcifer/core/: approvals.py  prompt_builder.py  runtime.py  tool_router.py
src/core/: agent.py  approvals.py  runtime.py  tool_router.py
tests/: conftest.py  test_governance.py
